--- a/Strings/AppResources.es.resx
+++ b/Strings/AppResources.es.resx
@@ -2332,7 +2332,7 @@ Consulte el mapa para más información</value>
     <value>Los servicios de rampa necesitan los Frenos de Parking ACTIVADOS, Luces Anticolisión ACTIVADAS, y motores APAGADOS.</value>
   </data>
   <data name="IntroPage.Home" xml:space="preserve">
-    <value>Inicio</value>
+    <value>INICIO</value>
   </data>
   <data name="LoginSubscriptionPage.NoSubscriptionFound" xml:space="preserve">
     <value>Encontramos tu cuenta pero no hay una suscripción activa asociada con ella.</value>
@@ -2342,5 +2342,326 @@ Consulte el mapa para más información</value>
   </data>
   <data name="Error.CannotOpenBrowser" xml:space="preserve">
     <value>No hay un navegador para abrir este enlace. Compruebe que haya un navegador instalado. (error {0})</value>
+  </data>
+  <data name="LogbookControl.AtcUpper" xml:space="preserve">
+    <value>CONTROL AÉREO</value>
+  </data>
+  <data name="LogbookControl.MultiplayerUpper" xml:space="preserve">
+    <value>MULTIJUGADOR</value>
+  </data>
+  <data name="MainMenuPage.AirTrafficControlUpper" xml:space="preserve">
+    <value>CONTROL AÉREO</value>
+  </data>
+  <data name="MenuAtcControl.Duration" xml:space="preserve">
+    <value>Duración</value>
+  </data>
+  <data name="Error.CouldNotGetFileSize" xml:space="preserve">
+    <value>No se pudo conectar al servidor, verifique su conexión a Internet (código de error {0})</value>
+  </data>
+  <data name="GameModeSelection.NoAvailableServer" xml:space="preserve">
+    <value>No hay servidor disponible</value>
+  </data>
+  <data name="Error.InvalidTimeSpan" xml:space="preserve">
+    <value>Las horas de inicio y finalización de esta sesión no son válidas (código de error {0})</value>
+  </data>
+  <data name="FlightFreeControl.ChangeAircraftUpper" xml:space="preserve">
+    <value>CAMBIAR AVIÓN</value>
+  </data>
+  <data name="FlightFreeControl.ImageNotFoundUpper" xml:space="preserve">
+    <value>IMAGEN NO ENCONTRADA</value>
+  </data>
+  <data name="FlightFreeControl.NewFlightUpper" xml:space="preserve">
+    <value>NUEVO VUELO</value>
+  </data>
+  <data name="FlightFreeControl.UnavailableUpper" xml:space="preserve">
+    <value>NO DISPONIBLE</value>
+  </data>
+  <data name="FlightFreeControl.WeatherUpper" xml:space="preserve">
+    <value>TIEMPO</value>
+  </data>
+  <data name="FlightMenu.AltimeterUpper" xml:space="preserve">
+    <value>ALTÍMETRO</value>
+  </data>
+  <data name="FlightMenu.ApproxDurationUpper" xml:space="preserve">
+    <value>DURACIÓN APROXIMADA</value>
+  </data>
+  <data name="FlightMenu.CloudsUpper" xml:space="preserve">
+    <value>NUBES</value>
+  </data>
+  <data name="FlightMenu.DistanceUpper" xml:space="preserve">
+    <value>DISTANCIA</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolDescription" xml:space="preserve">
+    <value>Mejora tus habilidades de pilotaje con tutoriales interactivos</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
+    <value>ESCUELA DE VUELO</value>
+  </data>
+  <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
+    <value>Elije tu avión y aeropuerto, personalice tu plan de vuelo y disfruta de una experiencia de vuelo inmersiva a su propio ritmo</value>
+  </data>
+  <data name="FlightMenu.FreeFlightUpper" xml:space="preserve">
+    <value>VUELO LIBRE</value>
+  </data>
+  <data name="FlightMenu.GenericFlightUpper" xml:space="preserve">
+    <value>VUELO GENÉRICO</value>
+  </data>
+  <data name="FlightMenu.LatestMetarUpper" xml:space="preserve">
+    <value>ÚLTIMO METAR</value>
+  </data>
+  <data name="FlightMenu.MissionsDescription" xml:space="preserve">
+    <value>Escoge vuelos con rutas chárter y de aerolíneas recomendadas basadas en el tráfico y el ATC</value>
+  </data>
+  <data name="FlightMenu.MissionsUpper" xml:space="preserve">
+    <value>MISIONES</value>
+  </data>
+  <data name="FlightMenu.ParkingUpper" xml:space="preserve">
+    <value>PARKING</value>
+  </data>
+  <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
+    <value>TEMPERATURA</value>
+  </data>
+  <data name="FlightMenu.TimeUpper" xml:space="preserve">
+    <value>HORA</value>
+  </data>
+  <data name="FlightMenu.TypeUpper" xml:space="preserve">
+    <value>TIPO</value>
+  </data>
+  <data name="FlightMenu.VisibilityUpper" xml:space="preserve">
+    <value>VISIBILIDAD</value>
+  </data>
+  <data name="FlightMenu.Wind" xml:space="preserve">
+    <value>{0:#000}° a {1} kts</value>
+  </data>
+  <data name="FlightMenu.WindCalm" xml:space="preserve">
+    <value>Calma</value>
+  </data>
+  <data name="FlightMenu.WindUpper" xml:space="preserve">
+    <value>VIENTO</value>
+  </data>
+  <data name="FlightMenu.WindWithGust" xml:space="preserve">
+    <value>{0:#000}° a {1} - {2} kts</value>
+  </data>
+  <data name="FlightMenu.WorldUpper" xml:space="preserve">
+    <value>MUNDO</value>
+  </data>
+  <data name="FlightMissionControl.LongHaulUpper" xml:space="preserve">
+    <value>LARGA DISTANCIA</value>
+  </data>
+  <data name="FlightMissionControl.MediumHaulUpper" xml:space="preserve">
+    <value>MEDIA DISTANCIA</value>
+  </data>
+  <data name="FlightMissionControl.NoMissionsFoundUpper" xml:space="preserve">
+    <value>NO SE HAN ENCONTRADO MISIONES</value>
+  </data>
+  <data name="FlightMissionControl.ShortHaulUpper" xml:space="preserve">
+    <value>CORTA DISTANCIA</value>
+  </data>
+  <data name="FlightMissionControl.UltraLongHaulUpper" xml:space="preserve">
+    <value>ULTRA LARGA DISTANCIA</value>
+  </data>
+  <data name="FlightSchoolControl.AircraftUpper" xml:space="preserve">
+    <value>AVIÓN</value>
+  </data>
+  <data name="FlightSchoolControl.NoEntrySelected" xml:space="preserve">
+    <value>Mostrar Aviones Legacy</value>
+  </data>
+  <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
+    <value>NO SE ENCONTRARON LECCIONES</value>
+  </data>
+  <data name="Global.NotApplicable" xml:space="preserve">
+    <value>N/A</value>
+  </data>
+  <data name="LogbookControl.AircraftUpper" xml:space="preserve">
+    <value>AVIÓN</value>
+  </data>
+  <data name="LogbookControl.AllUpper" xml:space="preserve">
+    <value>TODOS</value>
+  </data>
+  <data name="LogbookControl.DistanceUpper" xml:space="preserve">
+    <value>DISTANCIA</value>
+  </data>
+  <data name="LogbookControl.DurationUpper" xml:space="preserve">
+    <value>DURACIÓN</value>
+  </data>
+  <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
+    <value>Error al exportar el archivo de reproducción. Comprueba que tienes suficiente espacio de almacenamiento disponible</value>
+  </data>
+  <data name="LogbookControl.ExportingUpper" xml:space="preserve">
+    <value>EXPORTANDO</value>
+  </data>
+  <data name="LogbookControl.FileSizeUpper" xml:space="preserve">
+    <value>TAMAÑO DEL ARCHIVO</value>
+  </data>
+  <data name="LogbookControl.NoEntrySelected" xml:space="preserve">
+    <value>NO SE HA SELECCIONADO UNA ENTRADA</value>
+  </data>
+  <data name="LogbookControl.NoItemsFound" xml:space="preserve">
+    <value>NO SE HAN ENCONTRADO ARTÍCULOS</value>
+  </data>
+  <data name="LogbookControl.OnlyReplaysUpper" xml:space="preserve">
+    <value>SOLO REPLAYS</value>
+  </data>
+  <data name="LogbookControl.ServerUpper" xml:space="preserve">
+    <value>SERVIDOR</value>
+  </data>
+  <data name="LogbookControl.SoloUpper" xml:space="preserve">
+    <value>SOLO</value>
+  </data>
+  <data name="LogbookControl.XpEarnedUpper" xml:space="preserve">
+    <value>XP GANADO</value>
+  </data>
+  <data name="LogbookControl.YourLogbook" xml:space="preserve">
+    <value>SU LIBRO DE VUELO</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing12Months" xml:space="preserve">
+    <value>{0} / 12 meses</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing6Months" xml:space="preserve">
+    <value>{0} / 6 meses</value>
+  </data>
+  <data name="MainMenuPage.ControlButtonUpper" xml:space="preserve">
+    <value>CONTROLAR</value>
+  </data>
+  <data name="MainMenuPage.FlightUpper" xml:space="preserve">
+    <value>VUELOS</value>
+  </data>
+  <data name="MainMenuPage.FlyButtonUpper" xml:space="preserve">
+    <value>VOLAR</value>
+  </data>
+  <data name="MainMenuPage.OpenButtonUpper" xml:space="preserve">
+    <value>ABRIR</value>
+  </data>
+  <data name="MainMenuPage.ReplayButtonUpper" xml:space="preserve">
+    <value>REPETIR</value>
+  </data>
+  <data name="MainMenuPage.UnableToPlayReplay" xml:space="preserve">
+    <value>No se puede abrir el archivo de reproducción</value>
+  </data>
+  <data name="MenuAtcControl.ChangeAirportUpper" xml:space="preserve">
+    <value>CAMBIAR AEROPUERTO</value>
+  </data>
+  <data name="MenuAtcControl.Frequencies" xml:space="preserve">
+    <value>Frecuencias</value>
+  </data>
+  <data name="MenuAtcControl.MultipleFrequencies" xml:space="preserve">
+    <value>Múltiples frecuencias</value>
+  </data>
+  <data name="MenuAtcControl.NewAtcSessionUpper" xml:space="preserve">
+    <value>NUEVA SESIÓN DEL ATC</value>
+  </data>
+  <data name="MenuAtcControl.NoSessionsFoundUpper" xml:space="preserve">
+    <value>NO SE HAN ENCONTRADO SESIONES</value>
+  </data>
+  <data name="MenuAtcControl.ResumeAtcSessionQuestion" xml:space="preserve">
+    <value>¿Continuar sesión anterior?</value>
+  </data>
+  <data name="MenuAtcControl.UnableToRestartUserNotSame" xml:space="preserve">
+    <value>No se puede reiniciar porque esta sesión no está vinculada a su cuenta</value>
+  </data>
+  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
+    <value>Mostrar Aviones Legacy</value>
+  </data>
+  <data name="World.SoloDescription" xml:space="preserve">
+    <value>Elige tu propio avión y ruta, pon a prueba tus habilidades de pilotaje y explora hermosos paisajes sin reglas ni otros pilotos.</value>
+  </data>
+  <data name="DefaultMission.AfterLanding" xml:space="preserve">
+  <value>Bienvenido a {0}. Dirígete al parking y apaga el avión para finalizar esta misión</value>
+  </data>
+  <data name="DefaultMission.Congratulation" xml:space="preserve">
+    <value>¡Enhorabuena por completar tu vuelo a {0}!
+  Puedes terminar esta sesión o iniciar un vuelo nuevo hacia otro destino. ¡Nos vemos pronto en el aire!</value>
+  </data>
+  <data name="DefaultMission.Congratulation2" xml:space="preserve">
+    <value>¡Enhorabuena! Has llegado a a {0}!
+  Puedes terminar esta sesión o comenzar una ruta nueva a otro destino.</value>
+  </data>
+  <data name="DefaultMission.HaveAGoodFlight" xml:space="preserve">
+    <value>Que tengas un buen vuelo a {0}</value>
+  </data>
+  <data name="DefaultMission.HaveAGoodFlightTaxi" xml:space="preserve">
+    <value>Ya estás listo para rodar a la pista de despegue, que tengas un buen vuelo a {0}</value>
+  </data>
+  <data name="DefaultMission.MissionBriefWindow" xml:space="preserve">
+    <value>Esta es tu ventana de resumen de la misión. Puedes volver aquí en cualquier momento para ver tu próxima tarea. Esta ventana se puede ocultar tocando el botón "MISSION BRIEF" a la derecha</value>
+  </data>
+  <data name="DefaultMission.PushbackEnd" xml:space="preserve">
+    <value>El pushback ha terminado. Pulse "DETACH TUG" en el menú "GROUND SERVICES" para desconectar el remolcador del avión</value>
+  </data>
+  <data name="DefaultMission.PushbackEndPrompt" xml:space="preserve">
+    <value>Cuando termines, pulse el botón "PUSH" nuevamente para parar el pushback.</value>
+  </data>
+  <data name="DefaultMission.PushbackStart" xml:space="preserve">
+    <value>Ahora que los frenos de parking están desactivados, para comenzar el pushback, pulse el botón "PUSH" en el menú "GROUND SERVICES".</value>
+  </data>
+  <data name="DefaultMission.PushbackSteering" xml:space="preserve">
+    <value>El pushback ha comenzado, usa el deslizador "RUD BRAKES" en la parte inferior derecha para dirigir el avión en la dirección que desees.</value>
+  </data>
+  <data name="DefaultMission.ReadyForPushback" xml:space="preserve">
+    <value>Estamos listos para el pushback, abre el menú "GROUND SERVICES" a la derecha, deslízate hasta la sección "PUSHBACK" y toca "ATTACH TUG"</value>
+  </data>
+  <data name="DefaultMission.ReleaseBrakes" xml:space="preserve">
+    <value>Si estás listo para comenzar el pushback, necesitas desactivar los frenos de parking tocando el botón "PARK BRAKES" en la parte inferior izquierda</value>
+  </data>
+  <data name="DefaultMission.StartEngine" xml:space="preserve">
+    <value>Ahora podemos encender los motores. Abre el menú "SYSTEMS" a la derecha y toca "AUTO START" para arrancar los motores y preparar el avión para rodar</value>
+  </data>
+  <data name="DefaultMission.TapToContinue" xml:space="preserve">
+    <value>Toca aquí para continuar</value>
+  </data>
+  <data name="DefaultMission.Welcome" xml:space="preserve">
+    <value>¡Bienvenido a Infinite Flight! Toca esta ventana para comenzar y ver el resumen e instrucciones de la misión</value>
+  </data>
+  <data name="DefaultMission.YourMissionBrief" xml:space="preserve">
+    <value>Tu misión de hoy es:
+{0}</value>
+  </data>
+  <data name="Mission.MissionBrief" xml:space="preserve">
+    <value>Resumen de la Misión</value>
+  </data>
+  <data name="LogbookControl.LogbookControl.NoEntrySelected" xml:space="preserve">
+    <value>No hay entradas</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.ChooseAPlan" xml:space="preserve">
+    <value>Elije un plan</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.Discount" xml:space="preserve">
+    <value>{0:0}% de descuento</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.MonthlyUpper" xml:space="preserve">
+    <value>MENSUAL</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.MostPopular" xml:space="preserve">
+    <value>Plan más popular</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.PerMonth" xml:space="preserve">
+    <value>{0}{1:0.00}/mes</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.ProSubtitle" xml:space="preserve">
+    <value>Acede a toda la flota, aeropuertos mundiales, multijugador y ATC</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.ProSubtitleSubscribed" xml:space="preserve">
+    <value>Ya tienes una suscripción! Puedes gestionarla en tu app store.</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.RevertToDefaultAccount" xml:space="preserve">
+    <value>Volver a la cuenta predeterminada</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.SemiYearlyUpper" xml:space="preserve">
+    <value>SEMI ANUAL</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.YearlyUpper" xml:space="preserve">
+    <value>ANUAL</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.SignIn" xml:space="preserve">
+    <value>Inicia sesión</value>
+  </data>
+  <data name="SubscriptionMorePlansControl.SignInWithInfiniteFlight" xml:space="preserve">
+    <value>Inicia sesión con Infinite Flight</value>
+  </data>
+  <data name="Global.StartOver" xml:space="preserve">
+    <value>Empezar de nuevo</value>
+  </data>
+  <data name="Mission.MissionFailedUpper" xml:space="preserve">
+    <value>MISIÓN FALLIDA</value>
   </data>
 </root>
