--- a/Strings/AppResources.hu.resx
+++ b/Strings/AppResources.hu.resx
@@ -59,7 +59,10 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema id="root"
+    xmlns=""
+    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+    xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -2649,7 +2652,7 @@ Check map for more information</comment>
   </data>
   <data name="Settings.General.ShowLegacyAircraft.Subtitle" xml:space="preserve">
     <value>Olyan régebbi repülőgépek megjelenítése, amelyek nem tükrözik a legújabb fejlesztéseket (jó minőségű virtuális pilótafülke, műszerek stb.)</value>
-  <comment>Show legacy airplanes that don't reflect the latest evolutions (high quality virtual cockpits, instruments, etc...)</comment>
+    <comment>Show legacy airplanes that don't reflect the latest evolutions (high quality virtual cockpits, instruments, etc...)</comment>
   </data>
   <data name="Settings.General.ShowLegacyAircraft.Warning" xml:space="preserve">
     <value>A régebbi repülőgépek az Infinite Flight régebbi verzióinak extrái, és nem ugyanolyan minőségűek. Mindenképpen megnézed?</value>
@@ -2676,7 +2679,307 @@ Check map for more information</comment>
     <comment>Home</comment>
   </data>
   <data name="Error.CannotOpenBrowser" xml:space="preserve">
-    <value>Nem érhető el böngésző a hivatkozás megnyitásához – győződj meg róla, hogy telepítetted a böngészőt. Ha a probléma továbbra is fennáll, fordulj az ügyfélszolgálathoz (hibakód: {0})</value>
+    <value>Nem érhető el böngésző a hivatkozás megnyitásához – győződj meg arról, hogy van telepítve böngésző. Ha nem tudod megoldani a problémát akkor, fordulj az ügyfélszolgálathoz (hibakód: {0})</value>
     <comment>No browser is available to open this link - ensure you have a browser installed. Contact support if the issue persists (error code {0})</comment>
+  </data>
+  <data name="FlightFreeControl.ChangeAircraftUpper" xml:space="preserve">
+    <value>REPÜLŐ MEGVÁLTOZTATÁSA</value>
+  </data>
+  <data name="FlightFreeControl.ImageNotFoundUpper" xml:space="preserve">
+    <value>KÉP NEM TALÁLHATÓ</value>
+  </data>
+  <data name="FlightFreeControl.NewFlightUpper" xml:space="preserve">
+    <value>ÚJ REPÜLÉS</value>
+  </data>
+  <data name="FlightFreeControl.UnavailableUpper" xml:space="preserve">
+    <value>NEM ELÉRHETŐ</value>
+  </data>
+  <data name="FlightFreeControl.WeatherUpper" xml:space="preserve">
+    <value>IDŐJÁRÁS</value>
+  </data>
+  <data name="FlightMenu.AltimeterUpper" xml:space="preserve">
+    <value>ALTOMÉTER</value>
+  </data>
+  <data name="FlightMenu.ApproxDurationUpper" xml:space="preserve">
+    <value>KB. IDŐTARTAM</value>
+  </data>
+  <data name="FlightMenu.CloudsUpper" xml:space="preserve">
+    <value>FELHŐK</value>
+  </data>
+  <data name="FlightMenu.DistanceUpper" xml:space="preserve">
+    <value>TÁVOLSÁG</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolDescription" xml:space="preserve">
+    <value>Használd az interaktív oktatóanyagokat a pilóta képességeid fejlesztésére</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
+    <value>REPÜLŐ ISKOLA</value>
+  </data>
+  <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
+    <value>Válassz légijárművet és repülőteret, készítsd el a repülési tervedet, és élvezd a lenyűgöző élményt úgy ahogy szeretnéd</value>
+  </data>
+  <data name="FlightMenu.FreeFlightUpper" xml:space="preserve">
+    <value>SZABAD REPÜLÉS</value>
+  </data>
+  <data name="FlightMenu.GenericFlightUpper" xml:space="preserve">
+    <value>ÁLTALÁNOS REPÜLÉS</value>
+  </data>
+  <data name="FlightMenu.LatestMetarUpper" xml:space="preserve">
+    <value>LÉGTÉR JELENTÉS</value>
+  </data>
+  <data name="FlightMenu.MissionsDescription" xml:space="preserve">
+    <value>Ugorj bele a pilótaszékbe és repülj a forgalom és az ATC alapján ajánlott útvonalakon</value>
+  </data>
+  <data name="FlightMenu.MissionsUpper" xml:space="preserve">
+    <value>KÜLDETÉSEK</value>
+  </data>
+  <data name="FlightMenu.ParkingUpper" xml:space="preserve">
+    <value>PARKOLÁS</value>
+  </data>
+  <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
+    <value>HŐMÉRSÉKLET</value>
+  </data>
+  <data name="FlightMenu.TimeUpper" xml:space="preserve">
+    <value>IDŐ</value>
+  </data>
+  <data name="FlightMenu.TypeUpper" xml:space="preserve">
+    <value>TÍPUS</value>
+  </data>
+  <data name="FlightMenu.VisibilityUpper" xml:space="preserve">
+    <value>LÁTHATÓSÁG</value>
+  </data>
+  <data name="FlightMenu.Wind" xml:space="preserve">
+    <value>{0:#000}° {1} csomó</value>
+    <comment>{0:#000}° {1} csomó</comment>
+  </data>
+  <data name="FlightMenu.WindCalm" xml:space="preserve">
+    <value>Csendes</value>
+  </data>
+  <data name="FlightMenu.WindUpper" xml:space="preserve">
+    <value>SZÉL</value>
+  </data>
+  <data name="FlightMenu.WindWithGust" xml:space="preserve">
+    <value>{0:#000}° {1} - {2} csomó</value>
+  </data>
+  <data name="FlightMenu.WorldUpper" xml:space="preserve">
+    <value>VILÁG</value>
+  </data>
+  <data name="FlightMissionControl.LongHaulUpper" xml:space="preserve">
+    <value>HOSSZÚ TÁV</value>
+  </data>
+  <data name="FlightMissionControl.MediumHaulUpper" xml:space="preserve">
+    <value>KÖZEPES TÁV</value>
+  </data>
+  <data name="FlightMissionControl.NoMissionsFoundUpper" xml:space="preserve">
+    <value>NEM TALÁLHATÓ KÜLDETÉS</value>
+  </data>
+  <data name="FlightMissionControl.ShortHaulUpper" xml:space="preserve">
+    <value>RÖVID TÁV</value>
+  </data>
+  <data name="FlightMissionControl.UltraLongHaulUpper" xml:space="preserve">
+    <value>ULTRA HOSSZÚ TÁV</value>
+  </data>
+  <data name="FlightSchoolControl.AircraftUpper" xml:space="preserve">
+    <value>REPÜLŐGÉP</value>
+  </data>
+  <data name="FlightSchoolControl.NoEntrySelected" xml:space="preserve">
+    <value>NINCS KIVÁLASZTOTT BEJEGYZÉS</value>
+  </data>
+  <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
+    <value>NEM TALÁLHATÓ TANANYAG</value>
+  </data>
+  <data name="Global.NotApplicable" xml:space="preserve">
+    <value>NEM ALKALMAZHATÓ</value>
+  </data>
+  <data name="LogbookControl.AircraftUpper" xml:space="preserve">
+    <value>REPÜLŐGÉP</value>
+  </data>
+  <data name="LogbookControl.AllUpper" xml:space="preserve">
+    <value>ÖSSZES</value>
+  </data>
+  <data name="LogbookControl.AtcUpper" xml:space="preserve">
+    <value>ATC</value>
+  </data>
+  <data name="LogbookControl.DistanceUpper" xml:space="preserve">
+    <value>TÁVOLSÁG</value>
+  </data>
+  <data name="LogbookControl.DurationUpper" xml:space="preserve">
+    <value>IDŐTARTAM</value>
+  </data>
+  <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
+    <value>Hiba történt a visszajátszás fájl exportálása során. Ellenőrizd, hogy rendelkezel-e elegendő tárhellyel.</value>
+  </data>
+  <data name="LogbookControl.ExportingUpper" xml:space="preserve">
+    <value>EXPORTÁLÁS</value>
+  </data>
+  <data name="LogbookControl.FileSizeUpper" xml:space="preserve">
+    <value>FÁJLMÉRET</value>
+  </data>
+  <data name="LogbookControl.MultiplayerUpper" xml:space="preserve">
+    <value>TÖBBJÁTÉKOS</value>
+  </data>
+  <data name="LogbookControl.NoEntrySelected" xml:space="preserve">
+    <value>NINCS KIVÁLASZTOTT BEJEGYZÉS</value>
+  </data>
+  <data name="LogbookControl.NoItemsFound" xml:space="preserve">
+    <value>NEM TALÁLHATÓ ELEM</value>
+  </data>
+  <data name="LogbookControl.OnlyReplaysUpper" xml:space="preserve">
+    <value>CSAK VISSZAJÁTSZÁSOK</value>
+  </data>
+  <data name="LogbookControl.ServerUpper" xml:space="preserve">
+    <value>SZERVER</value>
+  </data>
+  <data name="LogbookControl.SoloUpper" xml:space="preserve">
+    <value>SZOLO</value>
+  </data>
+  <data name="LogbookControl.XpEarnedUpper" xml:space="preserve">
+    <value>SZERZETT XP</value>
+  </data>
+  <data name="LogbookControl.YourLogbook" xml:space="preserve">
+    <value>NAPLÓ</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing12Months" xml:space="preserve">
+    <value>{0} / 12 hónap</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing6Months" xml:space="preserve">
+    <value>{0} / 6 hónap</value>
+  </data>
+  <data name="MainMenuPage.AirTrafficControlUpper" xml:space="preserve">
+    <value>LÉGIFORGALMI IRÁNYÍTÁS</value>
+  </data>
+  <data name="MainMenuPage.ControlButtonUpper" xml:space="preserve">
+    <value>IRÁNYÍTÁS</value>
+  </data>
+  <data name="MainMenuPage.FlightUpper" xml:space="preserve">
+    <value>REPÜLÉS</value>
+  </data>
+  <data name="MainMenuPage.FlyButtonUpper" xml:space="preserve">
+    <value>REPÜLÉS</value>
+  </data>
+  <data name="MainMenuPage.OpenButtonUpper" xml:space="preserve">
+    <value>MEGNYITÁS</value>
+  </data>
+  <data name="MainMenuPage.ReplayButtonUpper" xml:space="preserve">
+    <value>VISSZAJÁTSZÁS</value>
+  </data>
+  <data name="MainMenuPage.UnableToPlayReplay" xml:space="preserve">
+    <value>Nem sikerült lejátszani a visszajátszást</value>
+  </data>
+  <data name="MenuAtcControl.ChangeAirportUpper" xml:space="preserve">
+    <value>REPÜLŐTÉR VÁLTOZTATÁS</value>
+  </data>
+  <data name="MenuAtcControl.Duration" xml:space="preserve">
+    <value>Időtartam</value>
+  </data>
+  <data name="MenuAtcControl.Frequencies" xml:space="preserve">
+    <value>Frekvenciák</value>
+  </data>
+  <data name="MenuAtcControl.MultipleFrequencies" xml:space="preserve">
+    <value>Több frekvencia</value>
+  </data>
+  <data name="MenuAtcControl.NewAtcSessionUpper" xml:space="preserve">
+    <value>ÚJ FORGALOM IRÁNYÍTÁS</value>
+  </data>
+  <data name="MenuAtcControl.NoSessionsFoundUpper" xml:space="preserve">
+    <value>NEM TALÁLHATÓ AKTÍV IRÁNYÍTÓ</value>
+  </data>
+  <data name="MenuAtcControl.ResumeAtcSessionQuestion" xml:space="preserve">
+    <value>Folytatod az forgalom irányítást?</value>
+  </data>
+  <data name="MenuAtcControl.UnableToRestartUserNotSame" xml:space="preserve">
+    <value>Nem indítható újra, mert ez az írányítás nem a te fiókodhoz kapcsolódik</value>
+  </data>
+  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
+    <value>Régebbi repülőgépek mutatása</value>
+  </data>
+  <data name="World.SoloDescription" xml:space="preserve">
+    <value>Válassz saját repülőgépet és útvonalat, teszteld a pilóta képességeidet és fedezd fel a gyönyörű tájakat szabályok vagy más pilóták nélkül.</value>
+  </data>
+  <data name="LogbookControl.LogbookControl.NoEntrySelected">
+    <value>NINCS KIVÁLASZTOTT BEJEGYZÉS</value>
+  </data>
+  <data name="Error.InvalidTimeSpan">
+      <value>A kezdő és befejező időpontok nem érvényesek (hiba kód: {0})</value>
+  </data>
+  <data name="GameModeSelection.NoAvailableServer">
+      <value>Nincs elérhető szerver</value>
+  </data>
+  <data name="Error.CouldNotGetFileSize">
+      <value>Nem sikerült csatlakozni a szerverhez, ellenőrizd az internetkapcsolatod (hiba kód: {0})</value>
+  </data>
+  <data name="DefaultMission.AfterLanding" xml:space="preserve">
+    <value>Üdvözöllek a(z) {0} repülőtéren. Gurulj a parkolóhelyre és állítsd le a repülőgépet a küldetés teljesítéséhez.</value>
+    <comment>Welcome to {0}. Taxi to parking and shutdown the airplane to complete this mission</comment>
+  </data>
+  <data name="DefaultMission.Congratulation" xml:space="preserve">
+    <value>Gratulálok a(z) {0} repülőtérre történő sikeres repülésedhez!
+Kiléphetsz ebből a repülésből, vagy elindulhatsz egy új útra egy új célállomás felé. Várunk vissza az Infinite Flight égboltján!</value>
+    <comment>Congratulations on completing this flight to {0}!
+You can quit this session or embark on another journey to a new destination. See you soon in the Infinite Flight skies!</comment>
+  </data>
+  <data name="DefaultMission.Congratulation2" xml:space="preserve">
+    <value>Gratulálok a(z) {0} repülőtérre történő sikeres repülésedhez!
+Kiléphetsz ebből a repülésből, vagy elindulhatsz egy új útra egy új célállomás felé.</value>
+    <comment>Congratulations on completing this flight to {0}!
+You can quit this session or embark on another journey to a new destination.</comment>
+  </data>
+  <data name="DefaultMission.HaveAGoodFlight" xml:space="preserve">
+    <value>Kellemes repülést {0} felé!</value>
+    <comment>Have a great flight to {0}</comment>
+  </data>
+  <data name="DefaultMission.HaveAGoodFlightTaxi" xml:space="preserve">
+    <value>Most már készen állsz a guruláshoz, kellemes repülést {0} felé</value>
+    <comment>You are now ready to taxi, have a great flight to {0}</comment>
+  </data>
+  <data name="DefaultMission.MissionBriefWindow" xml:space="preserve">
+    <value>Ez az áttekintő ablak a küldetéshez. Bármikor visszatérhetsz ide, hogy megnézd, mit kell tenned. Az ablakot be- és kikapcsolhatod a jobb oldalon található "KÜLDETÉS ÁTTEKINTÉS" gomb megérintésével.</value>
+    <comment>This is your mission brief window. You can come back here at any time to see what you need to do. This window can be toggled by tapping on the "MISSION BRIEF" button on the right</comment>
+  </data>
+  <data name="DefaultMission.PushbackEnd" xml:space="preserve">
+    <value>A vontatás megállt. Nyomd meg a "DETACH TUG" gombot a "GROUND SERVICES" menüben a vontató leválasztásához a repülőgépről.</value>
+    <comment>Pushback has been stopped. Press "DETACH TUG" in the "GROUND SERVICES" menu to disconnect the tug from the aircraft</comment>
+  </data>
+  <data name="DefaultMission.PushbackEndPrompt" xml:space="preserve">
+    <value>Amikor végeztél, nyomd meg újra a "PUSH" gombot a megállításhoz.</value>
+    <comment>When you're done, press the "PUSH" button again to stop.</comment>
+  </data>
+  <data name="DefaultMission.PushbackStart" xml:space="preserve">
+    <value>Most, hogy a parkolófékek fel vannak oldva, a vontatás elindításához csak koppints a "PUSH" gombra a "GROUND SERVICES" menüben.</value>
+    <comment>Now that the parking brakes are released, to start pushback, just tap on the "PUSH" button in the "GROUND SERVICES" menu.</comment>
+  </data>
+  <data name="DefaultMission.PushbackSteering" xml:space="preserve">
+    <value>Elindult a vontatás, használd az alsó jobb sarokban található "RUD BRAKES" csúszkát a repülőgép kormányzásához a kívánt irányba.</value>
+    <comment>Pushback has started, use the "RUD BRAKES" slider on the bottom right to steer the aircraft in the direction you want.</comment>
+  </data>
+  <data name="DefaultMission.ReadyForPushback" xml:space="preserve">
+    <value>Készen állunk a vontatásra. Nyisd meg a jobb oldalon található "GROUND SERVICES" menüt, görgess le a "PUSHBACK" szakaszra, majd koppints a "ATTACH TUG" lehetőségre.</value>
+    <comment>We are ready for pushback, open the "GROUND SERVICES" menu on the right, slide down to the "PUSHBACK" section and tap on "ATTACH TUG"</comment>
+  </data>
+  <data name="DefaultMission.ReleaseBrakes" xml:space="preserve">
+    <value>Ha készen állsz a vontatás megkezdésére, először fel kell oldanod a parkolóféket. Ehhez koppints a bal alsó sarokban található "PARK BRAKES" gombra.</value>
+    <comment>If you're ready to start pushback, the parking brakes need to be released by tapping on the "PARK BRAKES" button on the bottom left</comment>
+  </data>
+  <data name="DefaultMission.StartEngine" xml:space="preserve">
+    <value>Most már elindíthatjuk a hajtóműveket, ha még nem indultak el. Nyisd meg a jobb oldalon található "SYSTEMS" menüt, majd koppints az "AUTO START" lehetőségre a hajtóművek indításához és a repülőgép készenlétének eléréséhez a taxizáshoz.</value>
+    <comment>We can now start the engines if they are not started already. Open the "SYSTEMS" menu on the right and tap on "AUTO START" to start the engines and get the plane ready for taxi</comment>
+  </data>
+  <data name="DefaultMission.TapToContinue" xml:space="preserve">
+    <value>Kattints a folytatáshoz</value>
+    <comment>Tap here to continue</comment>
+  </data>
+  <data name="DefaultMission.Welcome" xml:space="preserve">
+    <value>Üdvözöllek az Infinite Flightban! Koppints erre az ablakra a kezdéshez és a küldetés áttekintőjének és utasításainak megtekintéséhez.</value>
+    <comment>Welcome to Infinite Flight! Tap this window to get started and see the mission briefing and instructions</comment>
+  </data>
+  <data name="DefaultMission.YourMissionBrief" xml:space="preserve">
+    <value>A mai küldetésed:
+{0}</value>
+    <comment>Your mission today is:
+{0}</comment>
+  </data>
+  <data name="Mission.MissionBrief" xml:space="preserve">
+    <value>KÜLDETÉS ÁTTEKINTÉS</value>
+    <comment>MISSION BRIEF</comment>
   </data>
 </root>
